Last spacing fix hopefully

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
 
 .container{
     width: 100%;
-    height: 210vh;
+    height: 205vh;
     background: linear-gradient(#edf6f9,#efd3d7,#ffddd2);
     display: flex;
     align-items: center;
